# micro_entity_mcp

./: .gitignore  Makefile  README.md  pyproject.toml
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md
docs/todo/: TODO-0001.md  TODO-0002.md  TODO-0003.md  TODO-0004.md  TODO-0005.md  TODO-0006.md  TODO-0007.md  TODO-0008.md
src/micro_entity/: codec.py  entity.py  markdown_store.py  partition.py  query.py  store.py  validation.py  vcs.py
src/servers/: _common.py  adr.py  issue.py  schemas.py  todo.py
tests/: test_adr_server.py  test_codec.py  test_entity.py  test_entrypoint.py  test_markdown_store.py  test_partition.py  test_query.py  test_smoke.py  test_store.py  test_todo_server.py  test_validation.py
tests/adr_server/: conftest.py  test_add.py  test_annotations.py  test_append_only.py  test_autocommit.py  test_commit.py  test_commit_sha.py  test_diff.py  test_dogfooding.py  test_get.py  test_git_not_found.py  test_health.py  test_history.py  test_id_normalization.py  test_instructions.py  test_list.py  test_next_id.py  test_no_progress.py  test_normalize_frontmatter.py  test_normalize_id.py  test_output_schema.py  test_param_docs.py  test_patch_body.py  test_project_override.py  test_query.py  test_revert.py  test_search.py  test_supersede.py  test_update.py
tests/codec/: test_entity_from_parts.py  test_entity_to_parts.py  test_parse_document.py  test_serialize_document.py
tests/issue_server/: conftest.py  test_attributes.py  test_create.py  test_delete.py  test_entrypoint.py  test_no_progress.py  test_normalize_id.py  (+2 more)
(+53 files in other folders)
