[project]
name = "micro_entity_mcp"
version = "0.1.0"
description = "Neutral core micro_entity package plus thin profile servers."
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "ruamel.yaml",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/micro_entity", "src/servers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
